--- a/assets/css/devise.css
+++ b/assets/css/devise.css
@@ -5,3 +5,32 @@
 i {
     cursor: pointer;
 }
+
+.form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+  
+.form-inline label {
+    margin: 5px 10px 5px 0;
+}
+  
+.form-inline input {
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+  
+.form-inline input[type="submit"] {
+    padding: 10px 20px;
+    background-color: #1C2541;
+    border: 1px solid transparent;
+    color: white;
+}
+  
+.form-inline button:hover {
+    background-color: royalblue;
+}
