--- a/assets/css/devise.css
+++ b/assets/css/devise.css
@@ -20,6 +20,7 @@ i {
     vertical-align: middle;
     margin: 5px 10px 5px 0;
     padding: 10px;
+    width: 150px;
     background-color: #fff;
     border: 1px solid #ddd;
 }
