--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a {
 }
 
 .bilan-box-content table .passif-line td:nth-child(2), .bilan-box-content table .passif-line td:nth-child(3) {
-    width: 175px;
+    width: 150px;
 }
 
 .bilan-box-content table .passif-line td:nth-child(2) {
@@ -61,7 +61,7 @@ a {
 
 .bilan-box-content table .passif-line td:nth-child(3), .bilan-box-content table .passif-line th:nth-child(3){
     text-align: right;
-    padding-right: 20px;
+    padding-right: 25px;
 }
 
 .passif-line {
@@ -69,14 +69,20 @@ a {
 }
 
 .passif-line th, .passif-line td {
-    padding-left: 25px;
+    padding-left: 60px;
 }
 
 .passif-line th h4 {
     text-align: left;
+    padding-left: 60px;
 }
 
 .total-line {
     border: 1px solid black;
     height: 35px;
+}
+
+.passif-line .case {
+    padding-top: 15px;
+    width: 175px;
 }
