--- a/assets/css/styles/style.css
+++ b/assets/css/styles/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(249, 249, 249);
 }
 
 .page-menu {
-    width: 20%;
-    height: fit-content;
+    width: 15%;
+    background-color: transparent;
     float: left;
 }
 
@@ -19,7 +19,7 @@ body {
 }
 
 .page-menu #liste-liens .liste-element {
-    line-height: 50px;
+    line-height: 150px;
     width: 100%;
     height: 50px;
     display: flex;
@@ -29,7 +29,7 @@ body {
 }
 
 .page-menu #liste-liens .liste-element:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
     background-color: #1C2541;
     color: white;
 }
