--- a/assets/dashboard/dashboard.scss
+++ b/assets/dashboard/dashboard.scss
@@ -41,17 +41,46 @@ a {
         margin-left: 60px;
     }
 
+    .resultat-box {
+        background-color: #00134c;
+
+        p {
+            color: rgb(212, 212, 212);
+        }
+        h2 {
+            color: white;
+        }
+    }
+
+    /*.seuil-box {
+        background-color: lightblue;
+
+        p {
+            color: #00134c;
+        }
+        h2 {
+            color: black;
+        }
+    }
+
+    .seuil-box:hover {
+        box-shadow: 10px 10px 10px rgba(118, 118, 118, 0.055);
+        color: white;
+        h2 {
+            color: white;
+        }
+    }*/
+
     .board-element-content:hover {
         box-shadow: 10px 10px 10px rgba(118, 118, 118, 0.055);
         color: white;
-        background-color: #1C2541;
+        background-color: #00134c;;
         transform: scale(1.05);
 
         p {
             color: rgb(202, 202, 202);
         }
     }
-
 }
 
 .header-board-charts {
@@ -60,10 +89,11 @@ a {
     margin-top: 50px;
 
     .board-element-chart {
-        height: 115%;
-        width: 66%;
+        height: 60%;
+        width: 90%;
         /*background-color: white;*/
         margin-left: 60px;
+        float: left;
         /*box-shadow: 10px 10px 10px rgba(118, 118, 118, 0.055);*/
 
         canva {
@@ -71,10 +101,14 @@ a {
             padding-top: 50px;
         }
     }
+}
 
-    .board-element-case {
-        border: $border-min;
-        height: 20%;
-        width: 30%;
+.header-board-title {
+    height: 75px;
+    width: 100%;
+
+    h2 {
+        padding-left: 65px;
+        padding-top: 65px;
     }
 }
