--- a/assets/css/menu/menu_compta.css
+++ b/assets/css/menu/menu_compta.css
@@ -31,4 +31,8 @@
 }
 .compta-menu-line-one .compta-menu-element-one:hover i {
   color: white;
+}
+
+#second-title {
+  padding-left: 25px;
 }/*# sourceMappingURL=menu_compta.css.map */
