--- a/assets/css/menu/main_menu.css
+++ b/assets/css/menu/main_menu.css
@@ -13,6 +13,7 @@
 }
 .main-menu-element a p i {
   font-size: 20px;
+  color: rgb(27, 59, 108);
 }
 .main-menu-element a p label {
   display: inline;
