--- a/assets/css/menu/main_menu.scss
+++ b/assets/css/menu/main_menu.scss
@@ -10,6 +10,7 @@ $icon-size : 20px;
             color: rgb(47, 47, 47);
             i {
                 font-size: $icon-size;
+                color: rgb(27, 59, 108);
             }
             label {
                 display: inline;
