--- a/assets/css/couts/couts.scss
+++ b/assets/css/couts/couts.scss
@@ -36,3 +36,7 @@ $box-shadow: 10px 10px 10px rgba(118, 118, 118, 0.055);
         color: whitesmoke;
     }
 }
+
+.case_chart {
+    height: 150px;
+}
